add query parameters. WIP: type-enum filter for bikes currently not working due to convertion error in generated code
