# src/main/java/com/randstaddigital/workshop/model/Bike.java
@@ -14,6 +14,6 @@ public class Bike {
   private LocalDate dayOfPurchase;
   private UUID stationId;
   private String brand;
-  private boolean electrified;
+  private Boolean electrified;
   private BikeType type;
 }
